Changes for simpler requests.